# NightlyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  premake5.lua
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml  codeql-analysis.yml
Engine/Source/Editor/: CMakeLists.txt  EditorApp.cpp  EditorCamera.cpp  EditorCamera.h  EditorUI.cpp  EditorUI.h  UIBackend.cpp  UIBackend.h  premake5.lua
Engine/Source/Editor/Windows/: ConsoleOutputWindow.cpp  ConsoleOutputWindow.h  DockspaceWindow.cpp  DockspaceWindow.h  EditorWindow.cpp  EditorWindow.h  ViewportWindow.cpp  ViewportWindow.h  WorldWindow.cpp  WorldWindow.h
Engine/Source/Plugins/: CMakeLists.txt  premake5.lua
Engine/Source/Plugins/TestPlugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.h
Engine/Source/Runtime/: CMakeLists.txt  PCH.h  premake5.lua
Engine/Source/Runtime/Core/: Application.cpp  Application.h  Core.h  Engine.cpp  Engine.h  EngineAPI.h  EngineTime.cpp  EngineTime.h  ITrackable.h  Log.cpp  Log.h  Math.cpp  Math.h  MemoryManager.cpp  MemoryManager.h  PCH.h  Plugin.h  PluginManager.cpp  PluginManager.h  UUID.cpp  UUID.h  Utils.cpp  Utils.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  library.cpp  library.h
Engine/Source/Runtime/Core/Event/: Event.h  EventSystem.cpp  EventSystem.h  InputDefinitions.h  InputEvents.cpp  InputEvents.h  InputSystem.cpp  InputSystem.h  KeyDefinitions.h  WindowEvents.cpp  WindowEvents.h
Engine/Source/Runtime/Platform/: PlatformDetection.h  WindowsPlatform.cpp  WindowsPlatform.h
Engine/Source/Runtime/Renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  ScreenPlane.cpp  ScreenPlane.h  Shader.cpp  Shader.h  VulkanAPI.cpp  VulkanAPI.h
Engine/Source/Runtime/World/: Entity.cpp  Entity.h  World.cpp  World.h  WorldManager.cpp  WorldManager.h
Engine/Source/Runtime/World/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Source/Shaders/: ScreenFragmentShader.glsl  ScreenVertexShader.glsl  UnlitFragmentShader.glsl  UnlitVertexShader.glsl
Engine/Source/Shaders/Vulkan/: Compile.sh  Unlit.frag  Unlit.vert  UnlitFrag.spv  UnlitVert.spv
Scripts/: Clean.py  GenerateNinja.py  GeneratePremake.py  GenerateProjectFiles.bat  GenerateProjectFiles.sh  GenerateVisualStudio2019.py  GenerateVisualStudio2022.py  GenerateXcode.py  InstallDeps.py  InstallLinuxDependencies.py  LaunchEditor.bat  LaunchEditor.py  LaunchEditor.sh  Setup.bat  Setup.py  Setup.sh  Utils.py
Scripts/Deprecated/: GenerateVisualStudio2019.py  GenerateVisualStudio2022.py
Scripts/Python/: LaunchEditor.py  Setup.py
Scripts/Python/Deprecated/: GenerateNinja.py
